updates so laravel can run

--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -59,6 +59,8 @@ RUN apt-get update && \
         libsqlite3-dev \
         sqlite3 \
         git \
+	zip \
+	unzip \
         curl \
         vim \
         nano \
